Prevent images from overflowing out of divs

--- a/v2/css/app.css
+++ b/v2/css/app.css
@@ -365,6 +365,10 @@ img.ecosystem-image {
   background-size: auto 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 .page-heading .main-heading {
   color: #fff;
 }
